// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable renders correctly 1`] = `
<div>
  <style>
      
  @-webkit-keyframes reloadingAnimation {
    0%{
      background-position-x: 200%
    }
    100%{
      background-position-x: 0%
    }
  }
  </style>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          style="cursor: pointer;"
        >
          NAME
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          style="cursor: pointer;"
        >
          COUNT
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          class="header-class"
          style="background-color: blue; cursor: pointer;"
        >
          STATUS
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          style="cursor: pointer;"
        >
          CREATED
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
      </tr>
      <tr>
        <th>
          <i
            class="fa undefined"
            icon="[object Object]"
            style="cursor: pointer; margin-bottom: 4px; margin-right: 5px;"
          />
          <input
            class="form-control-sm form-control"
            type="text"
            value=""
          />
        </th>
        <th>
          <input
            class="form-control-sm form-control"
            type="text"
            value=""
          />
        </th>
        <th>
          <select
            class="form-control-sm form-control"
          >
            <option
              value=""
            >
              All
            </option>
            <option
              value="0"
            >
              Active
            </option>
            <option
              value="1"
            >
              Deleted
            </option>
          </select>
        </th>
        <th>
          <select
            class="form-control-sm form-control"
          >
            <option
              value=""
            >
              All
            </option>
            <option
              value="0"
            >
              Active
            </option>
            <option
              value="1"
            >
              Deleted
            </option>
          </select>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Name 000
        </td>
        <td>
          0
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          1
        </td>
        <td>
          31.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 001
        </td>
        <td>
          1
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          30.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 002
        </td>
        <td>
          2
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          29.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 003
        </td>
        <td>
          3
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          28.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 004
        </td>
        <td>
          4
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          27.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 005
        </td>
        <td>
          5
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          26.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 006
        </td>
        <td>
          6
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          25.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 007
        </td>
        <td>
          7
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          24.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 008
        </td>
        <td>
          8
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          23.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 009
        </td>
        <td>
          9
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          22.01.2023
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th />
        <th
          class="footer-class"
          style="background-color: red;"
        >
          STATUS-FOOTER
        </th>
        <th />
      </tr>
    </tfoot>
  </table>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
  <div
    class="container-fluid paging"
  >
    <div
      class="row"
      style="margin-bottom: 20px;"
    >
      <div
        class="col-6"
        style="padding-left: 0px;"
      >
        <div
          class="btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link btn-sm"
            type="button"
          >
            10
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Anzahl pro Seite
            </h6>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              10
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              25
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              50
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              100
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              200
            </button>
          </div>
        </div>
        <span
          class="small ml-2"
        >
          Zeige 1 bis 10 von insgesamt 100 Resultaten
        </span>
      </div>
      <div
        class="col-6"
        style="text-align: right; padding-right: 0px;"
      >
        <div
          class="btn-group-sm btn-group"
          role="group"
        >
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;&lt;
          </button>
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            1
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            2
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            3
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            4
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            5
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            6
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            7
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;&gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable renders with draggable-column correctly 1`] = `
<div>
  <style>
      
  @-webkit-keyframes reloadingAnimation {
    0%{
      background-position-x: 200%
    }
    100%{
      background-position-x: 0%
    }
  }
  </style>
  <table
    class="table table-sm table-striped table-hover"
  >
    <thead>
      <tr>
        <th
          style="cursor: pointer;"
        >
          NAME
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          style="cursor: pointer;"
        >
          COUNT
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          style="cursor: pointer;"
        >
          STATUS
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
        <th
          style="cursor: pointer;"
        >
          CREATED
          <i
            class="fa ms-1"
            icon="[object Object]"
          />
        </th>
      </tr>
      <tr>
        <th>
          <i
            class="fa undefined"
            icon="[object Object]"
            style="cursor: pointer; margin-bottom: 4px; margin-right: 5px;"
          />
          <input
            class="form-control-sm form-control"
            type="text"
            value=""
          />
        </th>
        <th>
          <input
            class="form-control-sm form-control"
            type="text"
            value=""
          />
        </th>
        <th>
          <select
            class="form-control-sm form-control"
          >
            <option
              value=""
            >
              All
            </option>
            <option
              value="0"
            >
              Active
            </option>
            <option
              value="1"
            >
              Deleted
            </option>
          </select>
        </th>
        <th>
          <select
            class="form-control-sm form-control"
          >
            <option
              value=""
            >
              All
            </option>
            <option
              value="0"
            >
              Active
            </option>
            <option
              value="1"
            >
              Deleted
            </option>
          </select>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 000
        </td>
        <td>
          0
        </td>
        <td>
          1
        </td>
        <td>
          31.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 001
        </td>
        <td>
          1
        </td>
        <td>
          0
        </td>
        <td>
          30.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 002
        </td>
        <td>
          2
        </td>
        <td>
          0
        </td>
        <td>
          29.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 003
        </td>
        <td>
          3
        </td>
        <td>
          0
        </td>
        <td>
          28.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 004
        </td>
        <td>
          4
        </td>
        <td>
          0
        </td>
        <td>
          27.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 005
        </td>
        <td>
          5
        </td>
        <td>
          0
        </td>
        <td>
          26.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 006
        </td>
        <td>
          6
        </td>
        <td>
          0
        </td>
        <td>
          25.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 007
        </td>
        <td>
          7
        </td>
        <td>
          0
        </td>
        <td>
          24.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 008
        </td>
        <td>
          8
        </td>
        <td>
          0
        </td>
        <td>
          23.01.2023
        </td>
      </tr>
      <tr
        style="opacity: 1; z-index: 0; position: relative;"
      >
        <td>
          Name 009
        </td>
        <td>
          9
        </td>
        <td>
          0
        </td>
        <td>
          22.01.2023
        </td>
      </tr>
    </tbody>
  </table>
  <div
    id="DndDescribedBy-3"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-3"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
  <div
    class="container-fluid paging"
  >
    <div
      class="row"
      style="margin-bottom: 20px;"
    >
      <div
        class="col-6"
        style="padding-left: 0px;"
      >
        <div
          class="btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link btn-sm"
            type="button"
          >
            10
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Anzahl pro Seite
            </h6>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              10
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              25
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              50
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              100
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              200
            </button>
          </div>
        </div>
        <span
          class="small ml-2"
        >
          Zeige 1 bis 10 von insgesamt 100 Resultaten
        </span>
      </div>
      <div
        class="col-6"
        style="text-align: right; padding-right: 0px;"
      >
        <div
          class="btn-group-sm btn-group"
          role="group"
        >
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;&lt;
          </button>
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            1
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            2
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            3
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            4
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            5
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            6
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            7
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;&gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable renders without header correctly 1`] = `
<div>
  <style>
      
  @-webkit-keyframes reloadingAnimation {
    0%{
      background-position-x: 200%
    }
    100%{
      background-position-x: 0%
    }
  }
  </style>
  <table
    class="table table-sm table-striped table-hover"
  >
    <tbody>
      <tr>
        <td>
          Name 000
        </td>
        <td>
          0
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          1
        </td>
        <td>
          31.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 001
        </td>
        <td>
          1
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          30.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 002
        </td>
        <td>
          2
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          29.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 003
        </td>
        <td>
          3
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          28.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 004
        </td>
        <td>
          4
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          27.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 005
        </td>
        <td>
          5
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          26.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 006
        </td>
        <td>
          6
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          25.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 007
        </td>
        <td>
          7
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          24.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 008
        </td>
        <td>
          8
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          23.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 009
        </td>
        <td>
          9
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          22.01.2023
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th />
        <th
          class="footer-class"
          style="background-color: red;"
        >
          STATUS-FOOTER
        </th>
        <th />
      </tr>
    </tfoot>
  </table>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
  <div
    class="container-fluid paging"
  >
    <div
      class="row"
      style="margin-bottom: 20px;"
    >
      <div
        class="col-6"
        style="padding-left: 0px;"
      >
        <div
          class="btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-link btn-sm"
            type="button"
          >
            10
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Anzahl pro Seite
            </h6>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              10
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              25
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              50
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              100
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              200
            </button>
          </div>
        </div>
        <span
          class="small ml-2"
        >
          Zeige 1 bis 10 von insgesamt 100 Resultaten
        </span>
      </div>
      <div
        class="col-6"
        style="text-align: right; padding-right: 0px;"
      >
        <div
          class="btn-group-sm btn-group"
          role="group"
        >
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;&lt;
          </button>
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            1
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            2
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            3
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            4
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            5
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            6
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            7
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;&gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable renders without page changing correctly 1`] = `
<div>
  <style>
      
  @-webkit-keyframes reloadingAnimation {
    0%{
      background-position-x: 200%
    }
    100%{
      background-position-x: 0%
    }
  }
  </style>
  <table
    class="table table-sm table-striped table-hover"
  >
    <tbody>
      <tr>
        <td>
          Name 000
        </td>
        <td>
          0
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          1
        </td>
        <td>
          31.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 001
        </td>
        <td>
          1
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          30.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 002
        </td>
        <td>
          2
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          29.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 003
        </td>
        <td>
          3
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          28.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 004
        </td>
        <td>
          4
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          27.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 005
        </td>
        <td>
          5
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          26.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 006
        </td>
        <td>
          6
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          25.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 007
        </td>
        <td>
          7
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          24.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 008
        </td>
        <td>
          8
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          23.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 009
        </td>
        <td>
          9
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          22.01.2023
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th />
        <th
          class="footer-class"
          style="background-color: red;"
        >
          STATUS-FOOTER
        </th>
        <th />
      </tr>
    </tfoot>
  </table>
  <div
    id="DndDescribedBy-2"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-2"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
  <div
    class="container-fluid paging"
  >
    <div
      class="row"
      style="margin-bottom: 20px;"
    >
      <div
        class="col-6"
        style="padding-left: 0px;"
      >
        <span
          class="small ml-2"
        >
          Zeige 1 bis 10 von insgesamt 100 Resultaten
        </span>
      </div>
      <div
        class="col-6"
        style="text-align: right; padding-right: 0px;"
      >
        <div
          class="btn-group-sm btn-group"
          role="group"
        >
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;&lt;
          </button>
          <button
            class="btn btn-outline-secondary disabled"
            disabled=""
            type="button"
          >
            &lt;
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            1
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            2
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            3
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            4
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            5
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            6
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            7
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;
          </button>
          <button
            class="btn btn-outline-secondary"
            type="button"
          >
            &gt;&gt;
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable renders without paging correctly 1`] = `
<div>
  <style>
      
  @-webkit-keyframes reloadingAnimation {
    0%{
      background-position-x: 200%
    }
    100%{
      background-position-x: 0%
    }
  }
  </style>
  <table
    class="table table-sm table-striped table-hover"
  >
    <tbody>
      <tr>
        <td>
          Name 000
        </td>
        <td>
          0
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          1
        </td>
        <td>
          31.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 001
        </td>
        <td>
          1
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          30.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 002
        </td>
        <td>
          2
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          29.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 003
        </td>
        <td>
          3
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          28.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 004
        </td>
        <td>
          4
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          27.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 005
        </td>
        <td>
          5
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          26.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 006
        </td>
        <td>
          6
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          25.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 007
        </td>
        <td>
          7
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          24.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 008
        </td>
        <td>
          8
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          23.01.2023
        </td>
      </tr>
      <tr>
        <td>
          Name 009
        </td>
        <td>
          9
        </td>
        <td
          class="cell-class"
          style="background-color: yellow;"
        >
          0
        </td>
        <td>
          22.01.2023
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th />
        <th
          class="footer-class"
          style="background-color: red;"
        >
          STATUS-FOOTER
        </th>
        <th />
      </tr>
    </tfoot>
  </table>
</div>
`;
